<resources>
    <string name="app_name">酷达物联</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="device">设备</string>
    <string name="message">消息</string>
    <string name="my">我的</string>

    <string name="register">注册</string>
    <string name="modify_password">修改密码</string>
    <string name="forget_password">忘记密码</string>.

    <string name="login_three">第三方登录</string>

    <string name="about_phone">400-166-8226</string>
    <string name="about_website">www.wecarelove.com</string>
    <string name="about_name">深圳市酷达通讯有限公司</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>

    <string name="complete">完成</string>

    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>

    <string name="send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="recording_without_permission">无录音权限</string>
    <string name="the_recording_time_is_too_short">录音时间太短</string>

    <string name="contact_size">"紧急联系人(%d/5")</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_account">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- END -->

    <!-- 内容 -->
    <string name="change_phone_messge">更换手机号后，下次登录请使用新手机号登录。当前手机号为：%s</string>


    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <string name="exo_controls_fullscreen_description">全屏模式</string>
    <string name="exo_download_description">下载</string>
    <string name="exo_download_notification_channel_name">下载内容</string>
    <string name="exo_download_downloading">正在下载</string>
    <string name="exo_download_completed">下载完毕</string>
    <string name="exo_download_failed">下载失败</string>
    <string name="exo_download_removing">正在移除下载内容</string>
    <string name="exo_track_selection_title_video">视频</string>
    <string name="exo_track_selection_title_audio">音频</string>
    <string name="exo_track_selection_title_text">文字</string>
    <string name="exo_track_selection_none">无</string>
    <string name="exo_track_selection_auto">自动</string>
    <string name="exo_track_unknown">未知</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_mono">单声道</string>
    <string name="exo_track_stereo">立体声</string>
    <string name="exo_track_surround">环绕声</string>
    <string name="exo_track_surround_5_point_1">5.1 环绕声</string>
    <string name="exo_track_surround_7_point_1">7.1 环绕声</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_item_list">%1$s，%2$s</string>
    <string name="download_start_error">无法开始下载</string>

    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>
</resources>
